--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <noscript>Website design and Ecommerce store development company in Coimbatore</noscript>
   <head>
-
     <meta charset="utf-8">
+    <title>Website Design | Ecommerce | Mobile App Development | Web Hosting | Digital Marketing</title>
+    <meta name="keywords" content="Web Design Coimbatore, Web Design Company Coimbatore, Ecommerce Store, Shopping cart, Web Development Coimbatore, Web Development Company Coimbatore,Mobile Application Development Coimbatore" />
+    <meta name="description" content="We are the Experts in website design & Ecommerce web development in Coimbatore, India. We offer top quality responsive mobile friendly web sites and beautiful mobile applications">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Creative - Start Bootstrap Theme</title>
-
+    
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -57,7 +55,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>இணையதளங்கள் மற்றும் கைபேசி செயலிகள் வடிவமைப்பு சேவைகள்</strong>
+              <strong>இணையதள  வடிவமைப்பு மற்றும் பராமரிப்பு சேவைகள்</strong>
             </h1>
             <hr>
           </div>
@@ -553,13 +551,14 @@
                 <p>123-456-6789</p>
               </div>
           <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i> <i class="fa fa-comments fa-3x mb-3 sr-contact" aria-hidden="true"></i> <i class="fa fa-whatsapp fa-3x mb-3 sr-contact" aria-hidden="true"></i>
+            
             <p>123-456-6789</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+              <a href="mailto:your-email@your-domain.com">info@selvam.net</a>
             </p>
           </div>
         </div>
