--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Web Design Coimbatore, Web Design Company Coimbatore, Ecommerce Store, Shopping cart, Web Development Coimbatore, Web Development Company Coimbatore,Mobile Application Development Coimbatore" />
     <meta name="description" content="We are the Experts in website design & Ecommerce web development in Coimbatore, India. We offer top quality responsive mobile friendly web sites and beautiful mobile applications">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <meta name="google-site-verification" content="173l-arJLE_fWjAQxQqyBknGiXC8Ntz5M9_3MtFEYBo" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -569,7 +569,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">உங்களுக்கு உதவ நாங்கள் காத்திருக்கின்றோம்!</h2>
+            <h2 class="section-heading">உங்களுக்கு உதவுவதில் எங்களுக்குப் பெரு மகிழ்ச்சி!</h2>
             <hr style="" class=" text-light">
             <p class="mb-5">உங்கள் நிறுவனத்திற்கு இணையதளம் தொடர்பான எவ்வித  உதவி தேவைப்படினும் இன்றே எம்மைத் தொடர்புகொள்ளுங்கள்!</p>
           </div>
