--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <noscript>Website design and Ecommerce store development company in Coimbatore</noscript>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112032625-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112032625-1');
+</script>
     <meta charset="utf-8">
     <title>Website Design | Ecommerce | Mobile App Development | Web Hosting | Digital Marketing</title>
     <meta name="keywords" content="Web Design Coimbatore, Web Design Company Coimbatore, Ecommerce Store, Shopping cart, Web Development Coimbatore, Web Development Company Coimbatore,Mobile Application Development Coimbatore" />
