--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   gtag('config', 'UA-112032625-1');
 </script>
     <meta charset="utf-8">
-    <title>Website Design | Ecommerce | Mobile App Development | Web Hosting | Digital Marketing</title>
+    <title>Website Design, Web Development, Ecommerce, Web Hosting and Online Marketing Company in Coimbatore</title>
     <meta name="keywords" content="Web Design Coimbatore, Web Design Company Coimbatore, Ecommerce Store, Shopping cart, Web Development Coimbatore, Web Development Company Coimbatore,Mobile Application Development Coimbatore" />
-    <meta name="description" content="We are the Experts in website design & Ecommerce web development in Coimbatore, India. We offer top quality responsive mobile friendly web sites and beautiful mobile applications">
+    <meta name="description" content="Best company for website design, Ecommerce web development in Coimbatore. We offer top quality responsive mobile friendly web sites and beautiful mobile applications">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="173l-arJLE_fWjAQxQqyBknGiXC8Ntz5M9_3MtFEYBo" />
     <!-- Bootstrap core CSS -->
@@ -174,14 +174,14 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/1.jpeg">
-              <img class="img-fluid" src="img/portfolio/fullsize/1.jpeg" alt="">
+              <img class="img-fluid" src="img/portfolio/fullsize/1.jpeg" alt="Gym Website design in Coimbatore">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    SuperGym, Coimbatore
+                    சூப்பர் ஜிம், கோயம்புத்தூர் 
                   </div>
                   <div class="project-name">
-                   www.supergym.fitness
+                    http://www.supergym.fitness
                   </div>
                 </div>
               </div>
@@ -193,10 +193,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    நலம் யோகா மையம் , கோயம்புத்தூர் 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.nalamyogaa.com/
                   </div>
                 </div>
               </div>
@@ -204,11 +204,11 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/3.jpeg">
-              <img class="img-fluid" src="img/portfolio/fullsize/3.jpeg" alt="">
+              <img class="img-fluid" src="img/portfolio/fullsize/3.jpeg" alt="yoga center website design coimbatore">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    நலம் யோகா மையம் , கோயம்புத்தூர் 
                   </div>
                   <div class="project-name">
                     Project Name
