--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Harakol இசைக்குழு, கோயம்புத்தூர் 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.harakol.com/
                   </div>
                 </div>
               </div>
@@ -298,10 +298,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    முனைவர் வே.சங்கர நாராயணன், பிரபல பேச்சாளர் , சேலம்  
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://sankaranarayanan.net/
                   </div>
                 </div>
               </div>
@@ -313,10 +313,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    செல்வம் , கோயம்புத்தூர் 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.selvam.net/
                   </div>
                 </div>
               </div>
@@ -328,10 +328,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    KAS ஹோமியோபதி மருத்துவமனை - திருப்பூர் 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://kashomeo.com
                   </div>
                 </div>
               </div>
@@ -343,10 +343,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    suganskitchen சமையற்கலை இணையதளம்  , கோயம்புத்தூர் 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://suganskitchen.com/
                   </div>
                 </div>
               </div>
@@ -358,10 +358,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Sunrise பின்னலாடை நிறுவனம், திருப்பூர்.
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.sunrisecreation.com/
                   </div>
                 </div>
               </div>
@@ -373,10 +373,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                   Shri RKA வீட்டுமனை மற்றும் கட்டுமான நிறுவனம்  , கோயம்புத்தூர்
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.shrirkaconstruction.com/
                   </div>
                 </div>
               </div>
@@ -388,10 +388,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                   MG சுற்றுலா போக்குவரத்து நிறுவனம், பொள்ளாச்சி
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://mgtravels.co.in
                   </div>
                 </div>
               </div>
@@ -403,10 +403,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Aura4 அழகு நிலையம் , சேலம்  
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://aura4beauty.com
                   </div>
                 </div>
               </div>
@@ -418,10 +418,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    CB குழந்தைகள் கல்வி சாதனங்கள், கோயம்புத்தூர்
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://createbrain.com
                   </div>
                 </div>
               </div>
@@ -433,10 +433,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    அறிவியல் ஆராய்ச்சி பதிப்பகம் - சேலம் 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    https://advancescidirect.com/
                   </div>
                 </div>
               </div>
@@ -448,10 +448,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Human மருத்துவமனை நிதி சேவைகள்  - அமெரிக்கா 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.humanmedical.net/
                   </div>
                 </div>
               </div>
@@ -463,10 +463,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                   Infobait கணினி தொழில்நுட்ப  சேவைகள்  - அமெரிக்கா 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://infobait.org/
                   </div>
                 </div>
               </div>
@@ -478,10 +478,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    இணைய தொழில்நுட்ப பயிற்சி மையம், கோயம்புத்தூர் 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://instituteofweb.org/
                   </div>
                 </div>
               </div>
@@ -493,10 +493,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    சேலம் சுற்றுலா போக்குவரத்துக்கு சேவைகள், சேலம் 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://salemtravels.co.in/
                   </div>
                 </div>
               </div>
@@ -508,10 +508,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Human கணினி தொழில்நுட்ப சேவைகள், அமெரிக்கா 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://humanmanage.com/
                   </div>
                 </div>
               </div>
@@ -523,10 +523,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    அலாஸ்கா நடன மையம், அமெரிக்கா 
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.asdance.com
                   </div>
                 </div>
               </div>
@@ -538,10 +538,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Sipinnova நூற்பாலை இயந்திர நிறுவனம், கோயம்புத்தூர்
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.spinnova.in
                   </div>
                 </div>
               </div>
@@ -553,10 +553,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Tyche ஆயத்த ஆடைகள், கோயம்புத்தூர்
                   </div>
                   <div class="project-name">
-                    Project Name
+                    http://www.tycheclothing.in
                   </div>
                 </div>
               </div>
