--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="ta">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112032625-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'UA-112032625-1');
   </script>
   <meta charset="utf-8">
-  <title>Website Design, Web Development, Ecommerce and Web Hosting Company in Coimbatore</title>
-  <meta name="description" content="Best developers for business website and Ecommerce store development in Coimbatore. We offer beautiful and mobile friendly web sites and online stores with payment gateway"
-  />
-  <meta name="keywords" content="Website developers Coimbatore, Web Design Company Coimbatore, Ecommerce Store, Shopping cart, Web Development Company Coimbatore"
-  />
+  <title>Website Designers and Developors for business websites and ecommerce stores in Coimbatore</title>
+  <meta name="description" content="Best developers for business website and Ecommerce store development in Coimbatore. We offer beautiful and mobile friendly web sites and online stores with payment gateway"/>
+  <meta name="keywords" content="Website developers Coimbatore, Web Design Company Coimbatore, Ecommerce Store, Shopping cart, Web Development Company Coimbatore"/>
   <meta name="Expires" content="never" />
   <meta name="Author" content="selvam.net" />
   <meta name="Distribution" content="Global" />
