--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
           <i class="fa fa-whatsapp fa-3x mb-3 sr-contact" aria-hidden="true"></i>
           <p>+௯௧ ௯௫௬௬௯௦௫௨௨௬
             <br>
-            <img src="img/web-design-contact.png" />
+            <img src="img/web-design-contact.png" alt="web hosting company covai"/>
             <!-- (+91 95669 05226) -->
           </p>
 
@@ -613,7 +613,7 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
           <p>
-            <img src="img/web-development-contact.png" />
+            <img src="img/web-development-contact.png" alt="web design studio in cbe"/>
           </p>
         </div>
       </div>
