updating for seo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     gtag('config', 'UA-112032625-1');
   </script>
   <meta charset="utf-8">
-  <title>Website Designers and Developors for business websites and ecommerce stores in Coimbatore</title>
+  <title>Web Designers and Developors for company websites and ecommerce stores in Coimbatore</title>
   <meta name="description" content="Best developers for business website and Ecommerce store development in Coimbatore. We offer beautiful and mobile friendly web sites and online stores with payment gateway"/>
   <meta name="keywords" content="Website developers Coimbatore, Web Design Company Coimbatore, Ecommerce Store, Shopping cart, Web Development Company Coimbatore"/>
   <meta name="Expires" content="never" />
@@ -36,12 +36,19 @@
 </head>
 
 <body id="page-top">
-
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <strong> செல்வம்</strong>
+        <strong title="selvam">செல்வம்</strong>
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +57,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">அறிமுகம் </a>
+            <a title="About us" class="nav-link js-scroll-trigger" href="#about">அறிமுகம் </a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#services">எமது சேவைகள்</a>
@@ -401,7 +408,8 @@
                   MG சுற்றுலா போக்குவரத்து நிறுவனம், பொள்ளாச்சி
                 </div>
                 <div class="project-name">
-                  http://mgtravels.co.in
+                    <a href="https://mgtravels.co.in" target="_blank" title="Coimbatore Web design studio">
+                  http://mgtravels.co.in </a>
                 </div>
               </div>
             </div>
@@ -446,7 +454,8 @@
                   அறிவியல் ஆராய்ச்சி பதிப்பகம் - சேலம்
                 </div>
                 <div class="project-name">
-                  https://advancescidirect.com/
+                  <a href="https://advancescidirect.com/" target="_blank" title="Web development agency">
+                      https://advancescidirect.com/ </a>
                 </div>
               </div>
             </div>
@@ -461,7 +470,7 @@
                   Human மருத்துவமனை நிதி சேவைகள் - அமெரிக்கா
                 </div>
                 <div class="project-name">
-                  http://www.humanmedical.net/
+                  <a href="http://www.humanmedical.net/" target="_blank" title="Hospital website design in coimbatore"> http://www.humanmedical.net/ </a> 
                 </div>
               </div>
             </div>
@@ -620,6 +629,23 @@
     </div>
   </section>
 
+  <section class="bg-light text-primary" id="contact">
+      <div class="container">
+        <div class="row">
+            <div class="col  mx-auto text-center"> 
+                <div id="fb-root"></div>
+                <script>(function(d, s, id) {
+                  var js, fjs = d.getElementsByTagName(s)[0];
+                  if (d.getElementById(id)) return;
+                  js = d.createElement(s); js.id = id;
+                  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11';
+                  fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));</script>
+                <div class="fb-page" data-href="https://www.facebook.com/webselvam" data-tabs="timeline,messages" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/webselvam" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/webselvam">selvam.co.in</a></blockquote></div>
+            </div>
+          </div>
+        </div>
+      </section>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
