--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
   <section class="bg-light text-primary" id="contact">
       <div class="container">
         <div class="row">
-            <div class="col  mx-auto text-center"> 
+            <div class="col-lg-6  mx-auto text-center"> 
                 <div id="fb-root"></div>
                 <script>(function(d, s, id) {
                   var js, fjs = d.getElementsByTagName(s)[0];
@@ -643,6 +643,19 @@
                 }(document, 'script', 'facebook-jssdk'));</script>
                 <div class="fb-page" data-href="https://www.facebook.com/webselvam" data-tabs="timeline,messages" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/webselvam" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/webselvam">selvam.co.in</a></blockquote></div>
             </div>
+            <div class="col-lg-6  mx-auto text-center"> <!-- Place this tag where you want the widget to render. -->
+              <div class="g-page" data-width="450" data-href="//plus.google.com/u/1/104142777911569748934" data-rel="publisher"></div>
+              
+              <!-- Place this tag after the last widget tag. -->
+              <script type="text/javascript">
+                window.___gcfg = {lang: 'ta'};
+              
+                (function() {
+                  var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                  po.src = 'https://apis.google.com/js/platform.js';
+                  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+                })();
+              </script></div>
           </div>
         </div>
       </section>
