--- a/index.html
+++ b/index.html
@@ -631,6 +631,13 @@
 
   <section class="bg-light text-primary" id="contact">
       <div class="container">
+          <div class="row">
+              <div class="col-lg-8 mx-auto text-center">
+                <h2 class="section-heading">முகநூல் வழியே எங்களுடன் இணைந்திருங்கள்!</h2>
+                <hr style="" class=" text-light">
+                <!-- <p class="mb-5">உங்கள் நிறுவனத்திற்கு இணையதளம் தொடர்பான எவ்வித உதவி தேவைப்படினும் இன்றே எம்மைத் தொடர்புகொள்ளுங்கள்!</p> -->
+              </div>
+            </div>
         <div class="row">
             <div class="col-lg-6  mx-auto text-center"> 
                 <div id="fb-root"></div>
