--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
               </div>
             </div>
         <div class="row">
-            <div class="col-lg-6  mx-auto text-center"> 
+            <div class="col  mx-auto text-center"> 
                 <div id="fb-root"></div>
                 <script>(function(d, s, id) {
                   var js, fjs = d.getElementsByTagName(s)[0];
@@ -654,7 +654,20 @@
           </div>
         </div>
       </section>
-  <!-- Bootstrap core JavaScript -->
+
+      <!--Footer -->
+      <footer class="bd-footer text-muted">
+          <div class="container-fluid p-3 p-md-5">
+            <ul class="bd-footer-links">
+              <li><a href="https://www.facebook.com/webselvam/">Facebbok</a></li>
+              <li><a href="https://plus.google.com/104142777911569748934">Google Plus</a></li> 
+            </ul>            
+            <p> எங்கள் இணையதளத்திற்கு வருகை புரிந்தமைக்கு மிகவும் நன்றி! இந்த நாள் இனிய நாளாக அமையட்டும்! </p>
+          </div>
+        </footer>
+      <!--Footer ends -->
+ 
+      <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
