--- a/index.html
+++ b/index.html
@@ -658,10 +658,10 @@
       <!--Footer -->
       <footer class="bd-footer text-muted">
           <div class="container-fluid p-3 p-md-5">
-            <ul class="bd-footer-links">
+            <!-- <ul class="bd-footer-links">
               <li><a href="https://www.facebook.com/webselvam/">Facebbok</a></li>
               <li><a href="https://plus.google.com/104142777911569748934">Google Plus</a></li> 
-            </ul>            
+            </ul>             -->
             <p> எங்கள் இணையதளத்திற்கு வருகை புரிந்தமைக்கு மிகவும் நன்றி! இந்த நாள் இனிய நாளாக அமையட்டும்! </p>
           </div>
         </footer>
