--- a/index.html
+++ b/index.html
@@ -656,12 +656,13 @@
       </section>
 
       <!--Footer -->
-      <footer class="bd-footer text-muted">
+      <footer class="bd-footer text-center text-primary">
           <div class="container-fluid p-3 p-md-5">
             <!-- <ul class="bd-footer-links">
               <li><a href="https://www.facebook.com/webselvam/">Facebbok</a></li>
               <li><a href="https://plus.google.com/104142777911569748934">Google Plus</a></li> 
             </ul>             -->
+            <p><i class="fa fa-3x mb-3 fa-heart" aria-hidden="true"></i></p>
             <p> எங்கள் இணையதளத்திற்கு வருகை புரிந்தமைக்கு மிகவும் நன்றி! இந்த நாள் இனிய நாளாக அமையட்டும்! </p>
           </div>
         </footer>
