--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
   </nav>
 
   <header class="masthead text-center text-white d-flex">
-    <div class="container my-auto" style="background-image: url('img/web_design_coimbatore.png');
-    background-attachment: fixed;">
+    <div class="container my-auto">
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h1 class="text-uppercase">
