--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
     </div>
   </section>
 
-  <section class="bg-light text-primary" id="contact">
+  <section class="bg-white text-primary" id="contact">
       <div class="container">
           <div class="row">
               <div class="col-lg-8 mx-auto text-center">
@@ -656,7 +656,7 @@
       </section>
 
       <!--Footer -->
-      <footer class="bd-footer text-center text-primary">
+      <footer class="bd-footer bg-light text-center text-primary">
           <div class="container-fluid p-3 p-md-5">
             <!-- <ul class="bd-footer-links">
               <li><a href="https://www.facebook.com/webselvam/">Facebbok</a></li>
